--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,249 +3,22 @@ name: Build-Test-Deploy
   push:
     branches:
     - master
-  pull_request: null
+  pull_request:
+    types:
+    - labeled
+    - opened
+    - synchronize
+    - reopened
 jobs:
-  build:
-    name: Build
-    strategy:
-      matrix:
-        go-version:
-        - 1.13.x
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-    runs-on: ${{ matrix.platform }}
-    env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
-      GOFLAGS: -mod=vendor
-      SHELL: bash
-      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 10
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Setup
-      shell: bash
-      run: |
-        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
-        echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
-    - name: Preprocess
-      shell: bash
-      run: state run preprocess
-    - name: Build
-      shell: bash
-      run: |
-        echo "Branch: $GITHUB_HEAD_REF"
-        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
-          export BRANCH_OVERRIDE=unstable
-        fi
-        state run build
-    - name: Generate Update
-      shell: bash
-      run: state run generate-update
-    - name: Upload Session Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: session-build
-        path: build/
-  build_msi:
-    name: Build MSI's
-    runs-on: windows-latest
-    needs: build
-    env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
-      GOFLAGS: -mod=vendor
-      SHELL: bash
-      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 10
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Download Session Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: session-build
-        path: build/
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Setup
-      shell: bash
-      run: |
-        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
-        echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
-    - name: Build State MSI
-      shell: bash
-      run: |
-        echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
-        export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
-        export SHELL=bash
-        state run build-msi-state
-        signtool.exe sign -d "ActiveState State Tool" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} build/msi/state_tool.msi
-      env:
-        CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
-        MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
-    - name: Build Languages MSI
-      shell: bash
-      run: |
-        echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
-        export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
-        export SHELL=bash
-        state run build-msi-language ActivePerl-5.26 http://docs.activestate.com/activeperl/5.26/get/relnotes/
-        signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.26.msi
-        state run build-msi-language ActivePerl-5.28 http://docs.activestate.com/activeperl/5.28/get/relnotes/
-        signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.28.msi
-      env:
-        CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
-        MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
-    - name: Upload Session Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: session-build
-        path: build/
-  unittest:
-    name: Unit Test
-    strategy:
-      matrix:
-        go-version:
-        - 1.13.x
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-    runs-on: ${{ matrix.platform }}
-    env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
-      GOFLAGS: -mod=vendor
-      SHELL: bash
-      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 10
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Setup
-      shell: bash
-      run: |
-        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
-        echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
-    - name: Preprocess
-      shell: bash
-      run: state run preprocess
-    - name: Unit Tests
-      shell: bash
-      run: |
-        go test -v `go list ./... | grep -v api | grep -v integration | grep -v expect`
-  inttest:
-    if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
-    name: Integration Test
-    strategy:
-      matrix:
-        go-version:
-        - 1.13.x
-        platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
-    runs-on: ${{ matrix.platform }}
-    env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
-      GOFLAGS: -mod=vendor
-      SHELL: bash
-      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 15
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Setup
-      shell: bash
-      run: |
-        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
-        echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
-    - name: Preprocess
-      shell: bash
-      run: state run preprocess
-    - name: Build
-      shell: bash
-      run: |
-        echo "Branch: $GITHUB_HEAD_REF"
-        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
-          export BRANCH_OVERRIDE=unstable
-        fi
-        state run build
-    - name: Integration Tests
-      shell: bash
-      run: go test -timeout 20m ./test/integration -v
-  deploy:
-    name: Deploy
-    needs:
-    - build
-    - build_msi
-    - unittest
+  test:
+    name: test
     runs-on: ubuntu-latest
-    env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
-      GOFLAGS: -mod=vendor
-      SHELL: bash
-      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 10
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Setup
+    - name: Test
       shell: bash
       run: |
-        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
-        echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
-    - name: Download Session Artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: session-build
-        path: build/
-    - name: Preprocess
-      shell: bash
-      run: state run preprocess
-    - name: Cleanup Build Dir
-      shell: bash
-      run: rm build/state* || true
-    - name: Deploy
-      shell: bash
-      run: |
-        state run deploy-updates
-        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
-          state run deploy-installers
+        echo ${{ contains(github.event.pull_request.labels.*.name, 'version:') }}
+        if [ "${{ contains(github.event.pull_request.labels.*.name, 'version:') }}" -ne "true" ]; then
+          echo "Version label must be set"
+          exit 1
         fi
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - name: Cleanup Session Artifacts
-      uses: geekyeggo/delete-artifact@v1
-      with:
-        name: session-build
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: build
-        path: build/
