Don't deploy if version label is not set

--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -10,22 +10,10 @@ name: Build-Test-Deploy
     types: [labeled, opened, synchronize, reopened]
 
 jobs:
-  test:
-    name: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test
-        shell: bash
-        run: |
-          echo ${{ contains(github.event.pull_request.labels.*.name, 'version:') }}
-          if [ "${{ contains(github.event.pull_request.labels.*.name, 'version:') }}" != "true" ]; then
-            echo "Version label must be set"
-            exit 1
-          fi
-#  build: #@ jobs_build()
-#  build_msi: #@ jobs_build_msi()
-#  unittest: #@ jobs_unittest()
-#  inttest:
-#    if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
-#    _: #@ template.replace(jobs_inttest())
-#  deploy: #@ jobs_deploy()
+  build: #@ jobs_build()
+  build_msi: #@ jobs_build_msi()
+  unittest: #@ jobs_unittest()
+  inttest:
+    if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
+    _: #@ template.replace(jobs_inttest())
+  deploy: #@ jobs_deploy()
