--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -77,6 +77,7 @@ with:
 #@ def steps_deletesessartifacts():
 name: "Cleanup Session Artifacts"
 uses: geekyeggo/delete-artifact@v1
+if: always()
 with:
   name: session-build
 #@ end
@@ -85,7 +86,8 @@ with:
 name: "Validate"
 shell: bash
 run: |
-  if [ "${{ contains(github.event.pull_request.labels.*.name, 'version:') }}" != "true" ]; then
+  echo "labels: ${{ toJson(github.event.pull_request.labels) }}"
+  if [ "${{ contains(github.event.pull_request.labels.*.name, 'version') }}" != "true" ]; then
     echo "Version label must be set"
     exit 1
   fi
