--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -217,7 +217,8 @@ jobs:
     - name: Validate
       shell: bash
       run: |
-        if [ "${{ contains(github.event.pull_request.labels.*.name, 'version:') }}" != "true" ]; then
+        echo "labels: ${{ toJson(github.event.pull_request.labels) }}"
+        if [ "${{ contains(github.event.pull_request.labels.*.name, 'version') }}" != "true" ]; then
           echo "Version label must be set"
           exit 1
         fi
@@ -254,6 +255,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     - name: Cleanup Session Artifacts
       uses: geekyeggo/delete-artifact@v1
+      if: always()
       with:
         name: session-build
     - name: Upload Artifacts
