--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,7 +170,7 @@ jobs:
       GOFLAGS: -mod=vendor
       SHELL: bash
       GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    timeout-minutes: 15
+    timeout-minutes: 25
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -217,8 +217,7 @@ jobs:
     - name: Validate
       shell: bash
       run: |
-        echo "labels: ${{ toJson(github.event.pull_request.labels) }}"
-        if [ "${{ contains(github.event.pull_request.labels.*.name, 'version') }}" != "true" ]; then
+        if [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
           echo "Version label must be set"
           exit 1
         fi
