Fix integration tests

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -48,6 +48,9 @@ run: |
 name: "Integration Tests"
 shell: bash
 run: go test -timeout 20m ./test/integration -v
+env:
+  INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
+  INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
 #@ end
 ---
 #@ def steps_uploadsessartifacts():
