--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -198,6 +198,9 @@ jobs:
     - name: Integration Tests
       shell: bash
       run: go test -timeout 20m ./test/integration -v
+      env:
+        INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
+        INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
   deploy:
     name: Deploy
     needs:
