--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -47,3 +47,6 @@ jobs:
     - name: Integration Tests
       shell: bash
       run: go test -timeout 20m ./test/integration -v
+      env:
+        INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
+        INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
