--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,7 @@ name: Build-Test-Deploy
   push:
     branches:
     - master
-  pull_request:
-    types:
-    - labeled
-    - opened
-    - synchronize
-    - reopened
+  pull_request: null
 jobs:
   build:
     name: Build
