--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -7,6 +7,7 @@ name: Build-Test-Deploy
     branches:
       - master
   pull_request:
+    types: [labeled, opened, synchronize, reopened]
 
 jobs:
   build: #@ jobs_build()
