--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,12 @@ name: Build-Test-Deploy
   push:
     branches:
     - master
-  pull_request: null
+  pull_request:
+    types:
+    - labeled
+    - opened
+    - synchronize
+    - reopened
 jobs:
   build:
     name: Build
