Ensure install.ps1 can be accessed

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -115,6 +115,9 @@ jobs:
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+      - bash: |
+          cp ./installers/install.ps1 build
+        displayName: prepare Deployment
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: build
