Script and changes for MSI with variable parameters

--- a/activestate.yaml
+++ b/activestate.yaml
@@ -118,17 +118,45 @@ scripts:
       os: windows
     value: |
       set -e
-      if [ "$#" -ne 3 ]; then
-        echo "Required Arguments: <Project Name> <Release Notes URL> (must be under the ActiveState org) <Shortcuts> (comma-separated list of shortcuts to build)"
+      if [ "$#" -ne 4 ]; then
+        echo "Required Arguments: <Project Name> <Release Notes URL> <Shortcuts> <IconFile> (comma-separated list of shortcuts to build)"
         exit 1
       fi
+
+      IFS='/'
+      read -ra project <<< "${1}"
+      if [ ${#project[@]} -ne 2 ]; then
+        echo "Project Name argument must be of format Owner/Name"
+        exit 1
+      fi
+
       export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
-      sed -i "s^{{PROJECT}}^${1}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{PROJECT_NAME}}^${1}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{PROJECT}}^${project[1]}^g" installers/msi-language/Product.wxs
       sed -i "s^{{REL_NOTES}}^${2}^g" installers/msi-language/Product.wxs
       sed -i "s^{{SHORTCUTS}}^${3}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{ICON}}^${4}^g" installers/msi-language/Product.wxs
       sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
+
+      msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
+      echo "Copying MSI to build/${1}.msi"
+      cp build/msi-language/en-us/Deploy.msi "build/${project[1]}.msi"
+  - name: build-base-language-msi
+    description: |
+      Builds the language MSI with no project information, requires that you have .NET 4.x installed and on PATH.
+      The resulting MSI requires project information be injected in order to be functional.
+    standalone: true
+    constraints:
+      os: windows
+    value: |
+      set -e
+
+      export GOFLAGS='-mod=vendor'
+      dir=$(cmd //C echo %CD%)
+      cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
+      sed -i "s^{{ID}}^{FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFFFFFF}^g" installers/msi-language/Product.wxs
 
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
       echo "Copying MSI to build/${1}.msi"
