--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -111,7 +111,9 @@ jobs:
 
           state run build-msi-language ActiveState/ActivePerl-5.28 http://docs.activestate.com/activeperl/5.28/get/relnotes/ PerlCritic
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.28.msi
-        displayName: Build Language MSI
+
+          state run build-base-language-msi
+        displayName: Build Language MSIs
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
