--- a/activestate.yaml
+++ b/activestate.yaml
@@ -155,11 +155,13 @@ scripts:
       export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
+
+      # We require a product ID in order to build an MSI
       sed -i "s^{{ID}}^{FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFFFFFF}^g" installers/msi-language/Product.wxs
 
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
       echo "Copying MSI to build/${1}.msi"
-      cp build/msi-language/en-us/Deploy.msi "build/${1}.msi"
+      cp build/msi-language/en-us/Deploy.msi "build/base.msi"
   - name: test
     description: Runs unit tests (not integration tests)
     value: |
