--- a/activestate.yaml
+++ b/activestate.yaml
@@ -133,8 +133,8 @@ scripts:
       export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
-      sed -i "s^{{PROJECT}}^${1}^g" installers/msi-language/Product.wxs
-      sed -i "s^{{NAME}}^${project[1]}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{PROJECT_OWNER_AND_NAME}}^${1}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{PROJECT_NAME}}^${project[1]}^g" installers/msi-language/Product.wxs
       sed -i "s^{{REL_NOTES}}^${2}^g" installers/msi-language/Product.wxs
       sed -i "s^{{SHORTCUTS}}^${3}^g" installers/msi-language/Product.wxs
       sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
