Test state tool signing

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -102,7 +102,7 @@ jobs:
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Sign State Tool MSI
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
           state run build-msi-state
