Remove inputs entry

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -96,9 +96,7 @@ jobs:
           secureFile: 'Comodo-ActiveState-2020-10-09.p12'
       - bash: |
           export PATH=/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
-          signtool.exe sign -d "ActiveState State Tool" -f "$(Build.secureFilePath)" -p $(CODE_SIGNING_PASSWD) build/state.exe
-        inputs:
-          secureFile: 'Comodo-ActiveState-2020-10-09.p12'
+          signtool.exe sign -d "ActiveState State Tool" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) build/state.exe
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Sign State Tool MSI
