Revert azure config to default:

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -51,21 +51,21 @@ jobs:
       - bash: |
           ./installers/install.sh -b master -n -t $(BINPATH)
         displayName: Install State Tool
-      # - bash: |
-      #     set -e
+      - bash: |
+          set -e
 
-      #     export GOFLAGS=-mod=vendor
+          export GOFLAGS=-mod=vendor
 
-      #     state run preprocess
+          state run preprocess
 
-      #     go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
-      #     go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-      #     cp go-test.out build/$(Agent.OS)-tests.out
-      #     cp $(Agent.OS)-tests.xml build
-      #   env:
-      #     GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
-      #   displayName: Unit Tests
-      #   timeoutInMinutes: 12
+          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
+          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          cp go-test.out build/$(Agent.OS)-tests.out
+          cp $(Agent.OS)-tests.xml build
+        env:
+          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
+        displayName: Unit Tests
+        timeoutInMinutes: 12
       - bash: |
           set -e
           export GOFLAGS=-mod=vendor
@@ -100,7 +100,7 @@ jobs:
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Sign State Tool Executable
-        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
           state run build-msi-state
