--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -113,10 +113,10 @@ jobs:
       - bash: |
           export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
 
-          state run build-msi-language ActiveState/ActivePerl-5.26 http://docs.activestate.com/activeperl/5.26/get/relnotes/ PerlCritic
+          state run build-msi-language ActiveState/ActivePerl-5.26 5.26.3001 http://docs.activestate.com/activeperl/5.26/get/relnotes/ PerlCritic
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.26.msi
 
-          state run build-msi-language ActiveState/ActivePerl-5.28 http://docs.activestate.com/activeperl/5.28/get/relnotes/ PerlCritic
+          state run build-msi-language ActiveState/ActivePerl-5.28 5.28.1001 http://docs.activestate.com/activeperl/5.28/get/relnotes/ PerlCritic
           signtool.exe sign -d "ActiveState Language Installer" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./build/ActivePerl-5.28.msi
 
           state run build-base-language-msi
