--- a/activestate.yaml
+++ b/activestate.yaml
@@ -133,8 +133,8 @@ scripts:
       os: windows
     value: |
       set -e
-      if [ "$#" -ne 3 ]; then
-        echo "Required Arguments: <Project Name> (In format of Owner/Name) <Release Notes URL> <Shortcuts> (comma-separated list of shortcuts to build)"
+      if [ "$#" -ne 4 ]; then
+        echo "Required Arguments: <Owner/Name> <Version> <Release Notes URL> <Shortcuts> (comma-separated list of shortcuts to build)"
         exit 1
       fi
 
@@ -148,15 +148,16 @@ scripts:
       export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
-      
+
       # Use both Org and project name for this replacement
       sed -i "s^{{PROJECT_OWNER_AND_NAME}}^${1}^g" installers/msi-language/Product.wxs
-      
+
       # Only use the project name for this replacement
       sed -i "s^{{PROJECT_NAME}}^${project[1]}^g" installers/msi-language/Product.wxs
-      
-      sed -i "s^{{REL_NOTES}}^${2}^g" installers/msi-language/Product.wxs
-      sed -i "s^{{SHORTCUTS}}^${3}^g" installers/msi-language/Product.wxs
+
+      sed -i "s^{{VERSION}}^${2}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{REL_NOTES}}^${3}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{SHORTCUTS}}^${4}^g" installers/msi-language/Product.wxs
       sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
       sed -i "s^{{ICON}}^./assets/perl.ico^g" installers/msi-language/Product.wxs
 
