--- a/activestate.yaml
+++ b/activestate.yaml
@@ -138,13 +138,6 @@ scripts:
         exit 1
       fi
 
-      IFS='/'
-      read -ra project <<< "${1}"
-      if [ ${#project[@]} -ne 2 ]; then
-        echo "Project Name argument must be of format Owner/Name"
-        exit 1
-      fi
-
       export GOFLAGS='-mod=vendor'
       dir=$(cmd //C echo %CD%)
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
@@ -153,7 +146,7 @@ scripts:
       sed -i "s^{{PROJECT_OWNER_AND_NAME}}^${1}^g" installers/msi-language/Product.wxs
 
       # Only use the project name for this replacement
-      sed -i "s^{{PROJECT_NAME}}^${project[1]}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{PROJECT_NAME}}^$(echo $1 | sed -e "s^.*/^^")^g" installers/msi-language/Product.wxs
 
       sed -i "s^{{VERSION}}^${2}^g" installers/msi-language/Product.wxs
       sed -i "s^{{REL_NOTES}}^${3}^g" installers/msi-language/Product.wxs
