--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -9,6 +9,19 @@ run: |
   state run build
 #@ end
 ---
+#@ def steps_sign():
+name: Sign
+shell: bash
+if: matrix.os == 'windows-latest'
+run: |
+  echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
+  export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
+  signtool.exe sign -d "ActiveState State Tool" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} build/state.exe
+env:
+  CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
+  MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
+#@ end
+---
 #@ def steps_genupdate():
 name: "Generate Update"
 shell: bash
@@ -129,10 +142,11 @@ run: |
   echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
   export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
   export SHELL=bash
-  state run build-msi-language ActivePerl-5.26 http://docs.activestate.com/activeperl/5.26/get/relnotes/ PerlCritic
+  state run build-msi-language ActiveState/ActivePerl-5.26 5.26.3001 http://docs.activestate.com/activeperl/5.26/get/relnotes/ PerlCritic
   signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.26.msi
-  state run build-msi-language ActivePerl-5.28 http://docs.activestate.com/activeperl/5.28/get/relnotes/ PerlCritic
+  state run build-msi-language ActiveState/ActivePerl-5.28 5.28.1001 http://docs.activestate.com/activeperl/5.28/get/relnotes/ PerlCritic
   signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.28.msi
+  state run build-base-language-msi
 env:
   CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
   MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
