--- a/activestate.yaml
+++ b/activestate.yaml
@@ -167,7 +167,7 @@ scripts:
       # Only use the project name for this replacement
       sed -i "s^{{pad PROJECT_NAME}}^${1##*/}^g" installers/msi-language/Product.wxs
 
-      sed -i "s^{{$(pad VERSION)}}^${2}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{$(VERSION)}}^${2}^g" installers/msi-language/Product.wxs
       sed -i "s^{{$(pad REL_NOTES)}}^${3}^g" installers/msi-language/Product.wxs
       sed -i "s^{{$(pad SHORTCUTS)}}^${4}^g" installers/msi-language/Product.wxs
       sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
