--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -81,6 +81,7 @@ steps:
 name: Deploy
 needs: [ build, build_msi, unittest ]
 runs-on: ubuntu-latest
+if: github.ref == 'refs/heads/master'
 env: *env
 timeout-minutes: 10
 steps:
