--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -33,6 +33,7 @@ jobs:
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
         echo "::add-path::$bin"
+        printenv
     - name: Preprocess
       shell: bash
       run: state run preprocess
