--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
       shell: bash
       run: |
         echo "Branch: $GITHUB_HEAD_REF"
-        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
           export BRANCH_OVERRIDE=unstable
         fi
         state run build
@@ -206,7 +206,7 @@ jobs:
       shell: bash
       run: |
         echo "Branch: $GITHUB_HEAD_REF"
-        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
           export BRANCH_OVERRIDE=unstable
         fi
         state run build
@@ -266,7 +266,7 @@ jobs:
       shell: bash
       run: |
         state run deploy-updates
-        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
           state run deploy-installers
         fi
       env:
