--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -223,7 +223,6 @@ jobs:
     - build_msi
     - unittest
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
@@ -236,7 +235,7 @@ jobs:
     - name: Validate
       shell: bash
       run: |
-        if [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
+        if [ "${GITHUB_REF##*/}" != "master" ] && [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
           echo "Version label must be set"
           exit 1
         fi
@@ -264,11 +263,10 @@ jobs:
       run: rm build/state* || true
     - name: Deploy
       shell: bash
+      if: github.ref == 'refs/heads/master'
       run: |
         state run deploy-updates
-        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
-          state run deploy-installers
-        fi
+        state run deploy-installers
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
