Don't need to run unit tests in verbose anymore (we don't parse the result)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,7 +166,7 @@ jobs:
     - name: Unit Tests
       shell: bash
       run: |
-        go test -v `go list ./... | grep -v api | grep -v integration | grep -v expect`
+        go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest:
     if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
     name: Integration Test
