--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -55,7 +55,7 @@ run: state run preprocess
 name: "Unit Tests"
 shell: bash
 run: |
-  go test -v `go list ./... | grep -v api | grep -v integration | grep -v expect`
+  go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
 #@ end
 ---
 #@ def steps_inttest():
