--- a/activestate.yaml
+++ b/activestate.yaml
@@ -165,7 +165,7 @@ scripts:
       sed -i "s^{{$(pad PROJECT_OWNER_AND_NAME)}}^${1}^g" installers/msi-language/Product.wxs
 
       # Only use the project name for this replacement
-      sed -i "s^{{pad PROJECT_NAME}}^${1##*/}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{$(pad PROJECT_NAME)}}^${1##*/}^g" installers/msi-language/Product.wxs
 
       sed -i "s^{{VERSION}}^${2}^g" installers/msi-language/Product.wxs
       sed -i "s^{{$(pad REL_NOTES)}}^${3}^g" installers/msi-language/Product.wxs
