--- a/activestate.yaml
+++ b/activestate.yaml
@@ -39,6 +39,7 @@ scripts:
     value: |
       set -e
       $constants.SET_ENV
+      $scripts.preprocess
       go build -tags "$GO_BUILD_TAGS" -o $constants.BUILD_TARGET $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
   - name: build-for
     language: bash
@@ -54,6 +55,7 @@ scripts:
     value: |
       set -e
       $constants.SET_ENV
+      $scripts.preprocess
       mkdir -p build/update
       go run scripts/update-generator/main.go -o build/update $constants.BUILD_TARGET
   - name: install
