--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,15 +43,14 @@ jobs:
         printenv
     - name: Preprocess
       shell: bash
-      run: state run preprocess
-    - name: Build
-      shell: bash
       run: |
-        echo "Branch: $GITHUB_HEAD_REF"
         if [[ "${GITHUB_REF##*/}" == "master" ]]; then
           export BRANCH_OVERRIDE=unstable
         fi
-        state run build
+        state run preprocess
+    - name: Build
+      shell: bash
+      run: state run build
     - name: Sign
       shell: bash
       if: matrix.os == 'windows-latest'
@@ -162,7 +161,11 @@ jobs:
         printenv
     - name: Preprocess
       shell: bash
-      run: state run preprocess
+      run: |
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
+          export BRANCH_OVERRIDE=unstable
+        fi
+        state run preprocess
     - name: Unit Tests
       shell: bash
       run: |
@@ -201,15 +204,14 @@ jobs:
         printenv
     - name: Preprocess
       shell: bash
-      run: state run preprocess
-    - name: Build
-      shell: bash
       run: |
-        echo "Branch: $GITHUB_HEAD_REF"
         if [[ "${GITHUB_REF##*/}" == "master" ]]; then
           export BRANCH_OVERRIDE=unstable
         fi
-        state run build
+        state run preprocess
+    - name: Build
+      shell: bash
+      run: state run build
     - name: Integration Tests
       shell: bash
       run: go test -timeout 20m ./test/integration -v
@@ -257,7 +259,11 @@ jobs:
         path: build/
     - name: Preprocess
       shell: bash
-      run: state run preprocess
+      run: |
+        if [[ "${GITHUB_REF##*/}" == "master" ]]; then
+          export BRANCH_OVERRIDE=unstable
+        fi
+        state run preprocess
     - name: Cleanup Build Dir
       shell: bash
       run: rm build/state* || true
