--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -237,6 +237,7 @@ jobs:
     - name: Validate
       shell: bash
       run: |
+        echo "${{ toJson(github.event.pull_request.labels) }}"
         if [ "${GITHUB_REF##*/}" != "master" ] && [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
           echo "Version label must be set"
           exit 1
