Debug full event

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -102,7 +102,7 @@ with:
 name: "Validate"
 shell: bash
 run: |
-  echo "${{ toJson(github.event.pull_request.labels) }}"
+  echo "${{ toJson(github.event) }}"
   if [ "${GITHUB_REF##*/}" != "master" ] && [ "${{ contains(toJson(github.event.pull_request.labels), 'version:') }}" != "true" ]; then
     echo "Version label must be set"
     exit 1
