--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -6,6 +6,7 @@ jobs:
   inttest:
     name: Integration Test
     strategy:
+      fail-fast: false
       matrix:
         go-version:
         - 1.13.x
@@ -46,7 +47,7 @@ jobs:
       run: state run build
     - name: Integration Tests
       shell: bash
-      run: go test -timeout 20m ./test/integration -v
+      run: go test -timeout 20m ./test/integration
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
